--- a/src/components/Header/_Header.css
+++ b/src/components/Header/_Header.css
@@ -25,17 +25,19 @@
     height: 80px;
 
     @media screen and (max-width: 1024px ) {
-        margin-bottom: 30px;
+        margin-bottom: 15px;
+        width: 170px;
+        height: 50px;
     }
-
-    @media screen and (max-width: 768px ) {
-        width: 190px;
-        height: 60px;
-    }
+    
 }
 
 .header-nav {
     display: flex;
+    @media screen and (max-width: 1024px ) {
+        padding-top: 15px ;
+        border-top: 0.5px solid rgba(211, 211, 211, 0.712);
+    }
 }
 
 .header-nav-link {
@@ -47,7 +49,7 @@
     margin-right: 47px;
     transition: 0.2s;
     
-    @media screen and (max-width: 768px ) {
+    @media screen and (max-width: 1024px ) {
         font-size:16px;
         text-transform: uppercase;
         margin-right: 20px;
@@ -62,6 +64,9 @@
     color: #9fc700;
     font-size: 30px;
     transition: 0.2s;
+    @media screen and (max-width: 1024px ) {
+        font-size: 18px;
+    }
 }
 
 .header-nav-link.active {
