--- a/src/pages/CreateEmployee/_CreateEmployee.css
+++ b/src/pages/CreateEmployee/_CreateEmployee.css
@@ -4,14 +4,32 @@
     flex-direction: column;
     align-items: center;
     gap: 25px;
-    padding-bottom: 50px;
-    background-color: rgba(177, 177, 177, 0.377);;
+    padding: 50px;
+    padding-bottom: 87px !important;
+    background-color: rgba(177, 177, 177, 0.377);
+
+    @media screen and (max-width: 1024px ) {
+        font-size: 28px;
+        padding: 8px 18px 8px 18px;
+    }
 }
 
 .create-employee-title {
     font-size: 42px;
-    color: #9fc700;
-    margin: 20px 0 0 0;
+    color: #678005;
+    margin: 15px 0 0 0;
+    background-color: white;
+    padding: 10px 25px 10px 25px;
+    border-radius: 10px;
+    margin-bottom: -45px;
+    border: 0.2px solid rgba(211, 211, 211, 0.507);
+    z-index: 0;
+
+    @media screen and (max-width: 1024px ) {
+        font-size: 28px;
+        padding: 8px 18px 8px 18px;
+    }
+
 }
 
 .create-employee-content {
